# OOP_Chess_Project

./: .gitignore  CHESS.out  CMakeLists.txt  README.md  main  main.cpp  makefile  resources.rc  script.py  sfml-app  stockfish
Front/: GameMenu.txt  game1v1.txt  menu.txt
include/: GameMenu.h  MainMenu.h  about.h  board.h  chessEngine.h  game.h  game1v1.h  game1vs1.cpp  game1vs1.h  game1vsPC.h  gameFront.h  gameMode.h  king.h  move.h  piece.h  pieces.h  promote.h  proxyMenuAbout.h  showEnd.h  square.h  startGame.h  utils.h
script/: buffer.txt  script.py
src/: GameMenu.cpp  MainMenu.cpp  about.cpp  board.cpp  chessEngine.h  game.cpp  game1v1.cpp  game1vs1.cpp  game1vsPC.cpp  gameFront.cpp  king.cpp  menu.cpp  move.cpp  piece.cpp  pieces.cpp  promote.cpp  proxyMenuAbout.cpp  showEnd.cpp  startGame.cpp  timmer.cpp
